Fix wrong alignment of titles.

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -51,9 +51,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .api-title {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   margin-bottom: 1rem;
 }
 
